# train-schedules

./: .dockerignore  .earthignore  .gitignore  Cargo.toml  Dockerfile  Earthfile  Justfile  README.md  Trunk.toml  build-backend.sh  captain-definition  deploy.yml  docker-compose.yml  entrypoint  fly.toml  hosts.ini  index.html  opentelemetry-collector.yml  otel.deb
backend/: .gitignore  Cargo.toml  import.py  migrate.py  new-db.sh  queries.sql  transform.py
backend/data/: agency.txt  calendar.txt  calendar_attributes.txt  calendar_dates.txt  directions.txt  fare_attributes.txt  fare_rider_categories.txt  fare_rules.txt  farezone_attributes.txt  feed_info.txt  rider_categories.txt  routes.txt  shapes.txt  stop_times.txt  stops.txt  trips.txt
backend/server-files/: train-backend.service  trains.conf
backend/src/: db.rs  error.rs  main.rs  types.rs
backend/src/routes/: live.rs  mod.rs  stations.rs  trip.rs  twostops.rs  upcoming.rs
common/: Cargo.toml
common/src/: lib.rs
dev-proxy/: site.conf
frontend/: Cargo.toml  Dockerfile
frontend/src/: classes.rs  context.rs  fetch.rs  live_status.rs  main.rs  router.rs  station_list.rs  time.rs  time_display.rs  timer.rs  train_view.rs  trip_display.rs  trip_list.rs  trip_view.rs  twostop.rs  twostop_list.rs  util.rs
frontend/src/views/: mod.rs  router.rs  station_list.rs  station_upcoming.rs  trip_view.rs  twostop.rs  twostop_list.rs
frontend/static/: index.html  main.css
log/: Cargo.toml
log/src/: lib.rs
roles/compile/tasks/: main.yml
roles/deploy/files/: trains.natemara.com.conf
roles/deploy/tasks/: main.yml
static/: main.css
