[package]
name = "train-frontend"
version = "0.1.0"
authors = ["Nate Mara <nate@onesignal.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew-router = "0.7"
yew = "0.10"
train-schedules-common = { path = "../common" }
failure = "0.1.5"
log = { path = "../log" }
serde = "*"
serde_json = "*"
stdweb = "*"
chrono = "0.4"