[package]
name = "train-frontend"
version = "0.1.0"
authors = ["Nate Mara <nate@onesignal.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew-router = "0.15"
yew = "0.18"
train-schedules-common = { path = "../common" }
anyhow = "1"
log = "0.4"
serde = "*"
serde_json = "*"
web-sys = "0.3"
js-sys = "0.3"
chrono = "0.4"
console_log = { version = "0.2", features = ["color"] }
