[package]
name = "train-frontend"
version = "0.1.0"
authors = ["Lily Mara <lilymara@fastmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew-router = "0.16"
yew = "0.19"
train-schedules-common = { path = "../common" }
anyhow = "1"
log = "0.4"
serde = "*"
serde_json = "*"
web-sys = "0.3"
js-sys = "0.3"
chrono = "0.4"
console_log = { version = "0.2", features = ["color"] }
reqwest = "0.11.9"
gloo = "0.6.0"
wasm-bindgen-futures = "0.4.28"
futures = "0.3.19"
lazy_static = "1"
